refactoring IT test with auth